# jute-disease-pest-detection

./: .env.copy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
artifacts/logs/phase1_transfer_grid/: aggregated_grid_metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l1_imagenet-dr_0.0/: test-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l1_imagenet-dr_0.1/: conf_mat.json  train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l1_imagenet-dr_0.2/: test-metrics.csv  train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l2_plantvillage-dr_0.0/: test-metrics.csv  train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l2_plantvillage-dr_0.2/: train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l3_plantdoc-dr_0.0/: test-metrics.csv  train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l3_plantdoc-dr_0.1/: train-metrics.csv
artifacts/logs/phase1_transfer_grid/mobilenet_v2-l3_plantdoc-dr_0.2/: test-metrics.csv  train-metrics.csv
artifacts/logs/phase2_finetune_grid/: aggregated_grid_metrics.csv
artifacts/logs/phase2_finetune_grid/mobilenet_v2-l1_imagenet-lr_0.0001-wd_0.05/: test-metrics.csv  train-metrics.csv
artifacts/logs/phase2_finetune_grid/mobilenet_v2-l1_imagenet-lr_0.0005-wd_0.05/: test-metrics.csv  train-metrics.csv
artifacts/logs/resolution_exps/mobilenet_v2-512px-dr_0.0/: summary_metrics.csv
configs/: densenet.yaml  inception.yaml  mobilenet.yaml  mobilevit.yaml  resnet.yaml  template.yaml  vgg.yaml
configs/baselines/: densenet.yaml  efficientnet_b5.yaml  efficientnet_b7.yaml  inception.yaml  inception_v3.yaml  mobilenet.yaml  mobilenet_v2.yaml  mobilevit.yaml  mobilevit_s.yaml  resnet.yaml  resnet_50.yaml  vgg.yaml
configs/experiments/: mobilenet_v2_512.yaml
configs/grid/: mobilenet_v2_finetune_grid.yaml  mobilenet_v2_grid.yaml  mobilevit_grid.yaml  template_grid.yaml
configs/hyperparams/: mobilevit_grid.yaml
data/: disease_classes.txt  pest_classes.txt
docs/: ARCHITECTURE.md  references.bib
docs/agents/: CLAUDE.md  CONTEXT.md  GEMINI.md
notebooks/: 00_Setup.ipynb  01_EDA.ipynb  02-Training.ipynb  02_Data_Augmentation.ipynb  03-Analysis.ipynb
notebooks/dev/: Data_Augmentation.ipynb  Data_Augmentation.py  EDA.py  Weighted_Sampling.ipynb  Weighted_Sampling.py
notebooks/reproducibility/: 01_Exploratory_Data_Analysis.ipynb  01_Exploratory_Data_Analysis.py  02_Model_Selection_Training.ipynb  02_Model_Selection_Training_DL.ipynb  02_Model_Selection_Training_DL.py  02_Model_Selection_Training_ML.ipynb  02_Model_Selection_Training_ML.py  02_Training.ipynb  03_Model_Analysis_Tuning.ipynb  03_Model_Analysis_Tuning_DL.ipynb  03_Model_Analysis_Tuning_DL.py  03_Model_Analysis_Tuning_ML.ipynb  03_Model_Analysis_Tuning_ML.py  04_Model_Evaluation.ipynb  04_Model_Evaluation.py
scripts/: aggregate_results.py  check_resolutions.py  create_data_folders.sh  run_grid_search.py  test_ml.py  train_all_dl.py  train_all_dl.sh  train_all_dl_check.py  train_all_dl_check.sh  train_all_ml.py  train_all_ml.sh  train_cross_validation.py  train_dl_512.py  train_ml.py  tune_all_ml.py
src/annotator/: __init__.py  inference.py  models.py  routes.py  run.py
src/annotator/templates/: base.html  index.html
src/annotator/utils/: common.py  indexing.py
src/jute_disease/: __init__.py
src/jute_disease/data/: __init__.py  datamodule.py  download.py  jute_datamodule.py  pretrain_datamodule.py  transforms.py  utils.py
src/jute_disease/engines/: __init__.py  cli.py  split.py  train.py  train_ml.py
src/jute_disease/models/: __init__.py  jute_classifier.py
src/jute_disease/scripts/: train.py
src/jute_disease/utils/: __init__.py  config.py  constants.py  data.py  data_utils.py  download.py  feature_extractor.py  jute_data.py  logger.py  metrics.py  seed.py  visualization.py  wandb_utils.py
src/jute_disease_pest/data/: jute_datamodule.py
src/jute_disease_pest/engines/: cli.py  split.py  train.py
src/jute_disease_pest/models/: jute_classifier.py
src/jute_disease_pest/utils/: constants.py  data.py  logger.py  plant_village.py  seed.py
tests/: test_dl_models.py  test_feature_extractors.py  test_imports.py  test_ml_base.py  test_preprocessing.py
tests/annotator/: conftest.py  test_app.py
tests/data/: test_datamodule.py  test_preprocessing.py
tests/integration/: test_dl_models.py
tests/jute_disease/data/: test_datamodule.py  test_download.py  test_preprocessing.py  test_transforms.py  test_utils.py
tests/jute_disease/integration/: test_dl_models.py
tests/jute_disease/misc/: test_imports.py
tests/jute_disease/utils/: test_constants.py  test_data_utils.py  test_metrics.py  test_visualization.py
tests/models/dl/: test_classifier.py  test_dl_backbones.py  test_mobilevit.py
tests/models/ml/: test_classifiers.py  test_extract_features.py  test_feature_extractors.py  test_ml_base.py
tests/scripts/: test_run_grid_search.py
tests/utils/: test_constants.py  test_data_utils.py  test_download.py  test_visualization.py
(+58 files in other folders)
