[project]
name = "jute-disease-detection"
version = "0.1.0"
description = "Deep Learning Exploration for Jute Leaf Disease Detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentationsx[headless]>=2.0.14",
    "captum>=0.7.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "kagglehub>=0.4.2",
    "lightning[pytorch-extra]>=2.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "timm>=1.0.24",
    "torch",
    "torchvision",
    "umap-learn>=0.5.11",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupytext>=1.19.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jute_disease"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default; run with -m slow)",
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
exclude = [
    "notebooks/",
]
